css/styles.css
@import "imports/variables.css";

html,
body {
  height: 100%;
  margin: 0;
}

body {
  font-family: "Khula", serif;
  font-weight: 400;
  font-style: normal;
  background-color: #1e2d40;
  color: white;
  margin: 0px;
  display: flex;
  flex-direction: column;
}

header {
  display: flex;
  justify-content: space-between;
  padding: 10px 20px;
  position: relative;
  align-items: center;
}

main {
  padding-left: 20px;
  flex-grow: 1;
}

h1 {
  font-family: "Noticia Text", serif;
  font-weight: 600;
  font-style: normal;

  padding-left: 0;
  text-align: center;
}

h2 {
  font-family: "Ruda", serif;
  font-weight: 400;
  font-style: normal;
}

footer,
header {
  background-color: var(--contrast-background-color);
  color: var(--text-contrast-color);
}

form {
  display: flex;
  flex-direction: column;
}

.hamburger-icon {
  padding: 0;
  font-size: 35px;
  cursor: pointer;
}

.current {
  text-decoration: underline;
  font-weight: bold;
}

.logo {
  height: auto;
  width: 140px;
}

.cart {
  height: auto;
  width: 25px;
  margin: 0px;
}

nav {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  position: absolute;
  right: 0;
  top: 100%;
  background-color: var(--contrast-background-color);
  z-index: 10;
}

nav a {
  text-decoration: none;
  display: block;
  color: var(--text-contrast-color);
  padding: 5px 35px;
}

nav,
#menu-checkbox {
  display: none;
}

#menu-checkbox:checked ~ nav {
  display: block;
}

.heading-container {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
}

.cta {
  font-family: "Khula", serif;
  text-decoration: none;
  background-color: var(--avatareye-constrast-color);
  padding: 10px 30px;
  color: var(--text-contrast-color);
  border-radius: 15px;
  display: inline-block;
  font-size: 18px;
  cursor: pointer;
}

.cta:hover {
  background-color: #c6c18b;
  cursor: pointer;
}

.add-to-cart {
  position: relative;
  text-align: center;
  width: 120px;
}

#add-to-cart-checkbox:checked + .add-to-cart {
  background-color: #efa367;
}

.add-to-cart::before {
  content: "Add to cart";
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 18px;
  color: var(--text-contrast-color);
}

#add-to-cart-checkbox:checked + .add-to-cart::before {
  content: "Added to cart";
  width: 120px;
}

.main {
  padding-left: 0 !important;
}

/*Home page*/
.top-section {
  background-color: #000000;
  background-image: url("../images/avatar-hero.png");
  height: 400px;
  background-size: contain;
  background-position: right;
  background-repeat: no-repeat;
  margin-left: -20px;
  padding-left: 20px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.top-section-content h1,
.top-section-content p {
  width: 120px;
}

.top-section h1 {
  text-align: left;
  font-size: 25px;
  margin-top: 0;
}

.top-section p {
  font-size: 15px;
}

.movie-covers img {
  height: 400px;
  padding: 10px 20px 20px 0px;
}

.movie-covers a {
  padding: 0;
}

/*End home page*/

/*Category labels on home page*/
input[type="radio"] {
  display: none;
}

input[type="radio"]:checked + label {
  color: var(--avatareye-constrast-color);
}

.content {
  display: none;
}

#action:checked ~ .content.action,
#comedy:checked ~ .content.comedy,
#horror:checked ~ .content.horror {
  display: block;
}

label:hover {
  cursor: pointer;
}

label {
  display: inline-block;
  font-size: 18px;
  padding: 40px 20px 10px 0px;
}
/*End category labels on home page*/

/*Video page*/
.movie-grid {
  display: grid;
  grid-template-columns: 1 fr;
  justify-content: center;
}

.movie-cover-checkout {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.movie-cover-checkout img {
  width: 300px;
  height: auto;
}

.movie-cover-checkout-textcontent {
  text-align: left;
  width: 350px;
  margin-top: 20px;
}

.movie-cover-checkout-textcontent :first-child {
  margin-bottom: 20px;
}

.movie-cover-checkout-textcontent p {
  margin: 0px 0px 0px 20px;
}

.movie-cover-checkout-buttons {
  margin: 20px 0;
  display: flex;
  justify-content: center;
  width: 350px;
  gap: 20px;
}

.movie-cover-checkout-buttons a {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

/*End video page*/

/*About us-page*/
.aboutus-content {
  display: flex;
  flex-direction: column;
  margin: auto;
}

.aboutus-content p {
  width: 80%;
  margin: auto;
  padding: 10px;
}

.aboutus-buttons {
  display: flex;
  justify-content: center;
  gap: 20px;
  margin: 20px 20px 20px 0px;
}

.ref-buttons {
  margin-top: 20px !important;
}

/*End about us-page*/

/*Checkout page*/
.checkout-cart h2 {
  font-size: 35px;
  margin: 0;
}

.checkout-cart h3 {
  font-size: 25px;
  margin: 0px 0px 20px 0px;
}

.checkout {
  display: flex;
  flex-direction: column;
  max-width: 350px;
  margin: 20px auto;
}

.checkout-cart {
  background-color: #405173;
  padding: 20px;
  border-radius: 10px 10px 0 0;
}

.checkout-cart img {
  height: 300px;
  width: auto;
}

.cart-info {
  display: flex;
}

.cart-info-right {
  display: flex;
  flex-direction: column;
  margin: 20px 0 0 20px;
}

.cart-info-right i {
  margin-left: 50px;
}

.cart-info-right p {
  margin: 0;
}

.discount {
  display: flex;
  border: 1px solid;
  border-radius: 15px;
  justify-content: space-between;
  align-items: center;
  padding: 0 10px;
  margin-bottom: 10px;
}

.discount a {
  background-color: #efa367;
  color: var(--text-contrast-color);
  border-radius: 10px;
  margin: 16px 0;
  text-decoration: none;
  padding: 4px 10px;
}

.order-summary {
  border: 1px solid;
  border-radius: 15px;
  padding: 0 10px;
}

.price {
  display: flex;
  flex-direction: column;
  margin-bottom: 16px;
}

.price p {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin: 0;
}

hr {
  margin: 20px 0;
  color: white;
}

.bold {
  font-weight: bold;
}
/* ... */

